@@ -80,13 +80,10 @@ their best to check for bugs or other problems with the patch. They
 are also expected to show good judgment in whether or not they review
 a patch at all, or defer to another reviewer.</p>
 
-<p>Typically a potential Reviewer would be nominated once they have
-submitted around 80-120 good patches. They should also be in touch
+<p>A potential Reviewer may be nominated once they have
+submitted a minimum of 80 good patches. They should also be in touch
 with other reviewers and aware of who are the experts in various
-areas. If someone submits fewer patches than this, but has experience
-working in another WebKit-based or khtml-based engine and has a track
-record of excellent collaboration with the WebKit project, they may be
-nominated sooner.</p>
+areas.</p>
 
 <p>A person who submits many patches but does not show good
 collaboration skills, code understanding or understanding of project
