@@ -1,3 +1,14 @@
+2009-11-18  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by David Levin.
+
+        Make 80 patches a formal requirement for reviewership
+        https://bugs.webkit.org/show_bug.cgi?id=31313
+        Per discussion on the webkit-reviewers list:
+        http://lists.webkit.org/mailman/private.cgi/webkit-reviewers/2009-November/000795.html
+
+        * coding/commit-review-policy.html:
+
 2009-11-18  Daniel Bates  <dbates@webkit.org>
 
         Reviewed by Eric Seidel.
